Add PermissionScreen Layout

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,6 +130,10 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_11
+    }
 
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
