--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "react": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-native": "0.71.3",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.0"
@@ -30,6 +30,7 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
