--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,11 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+.eslintrc.js
+.prettierrc.js
+.watchmanconfig
+babel.config.js
+metro.config.js
+tsconfig.json
+yarn.lock
